# shakespear

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.sh
.circleci/: config.yml
cmakeModules/: gammaray.cmake
cmake_superbuild/: CMakeLists.txt
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  Widget.cpp  Widget.ui  main.cpp
src/: CMakeLists.txt
src/_config/: aut.conf.in  shakespear.log.ini.in
src/app/: CMakeLists.txt  main.cpp  shakespeare.po
src/config/: aut.conf  shakespear.log.ini
src/core/: CMakeLists.txt  CustomMessage.cpp  CustomMessage.h  MessageCodec.cpp  MessageCodec.h  MessageTypes.h  SocketReader.cpp  SocketReader.h  TestCase.cpp  TestCase.h  TestResult.cpp  TestResult.h
src/core/selectors/: ClassMatcher.cpp  ClassMatcher.h  CompoundMatcher.cpp  CompoundMatcher.h  FuzzyPropertyMatcher.cpp  FuzzyPropertyMatcher.h  InvalidSelector.h  LookupError.h  ObjectMatcher.h  ObjectNameMatcher.cpp  ObjectNameMatcher.h  ObjectsSelector.cpp  ObjectsSelector.h  PropertyMatcher.cpp  PropertyMatcher.h  TypeMatcher.cpp  TypeMatcher.h
src/launcher/: AppManifest.cpp  AppManifest.h  CMakeLists.txt  InvalidConnection.h  InvalidRunOptions.h  MainForm.cpp  MainForm.h  MainForm.ui  NetworkClient.cpp  NetworkClient.h  NetworkServer.cpp  NetworkServer.h  TestRun.cpp  TestRun.h  TestRunner.cpp  TestRunner.h  launcher.po  launcher_ru.ts  main.cpp  shakespear_launcher.po  shakespear_launcher_ru.ts  shakespeare.po
src/launcher/appkit/: AppManifest.cpp  AppManifest.h  Application.cpp  Application.h  Paths.cpp  Paths.h  ReturnCode.h  UnixSignalHandler.cpp  UnixSignalHandler.h
src/log/: CMakeLists.txt
src/plugin/: CMakeLists.txt  GammarayObjectSelector.cpp  GammarayObjectSelector.h  NetworkClient.cpp  NetworkClient.h  ShakespearPlugin.cpp  ShakespearPlugin.h  ShapeInjector.cpp  ShapeInjector.h  core.mjs  plugin.qrc  shakespear_plugin.po  shapeinjector.json
src/plugin/_config/: shakespear.log.ini.in
src/plugin/metadata/: ShakespearMetadata.cpp  ShakespearMetadata.h  shakespearplugin.json
src/ui/: CMakeLists.txt  LogWidget.cpp  LogWidget.h  MainForm.cpp  MainForm.h  MainForm.ui  shakespear_ui_ru.ts
src/ui/logging/: CMakeLists.txt  TextEditGetter.h  TextEditSink.cpp  TextEditSink.h  TextEditSinkBuilder.cpp  TextEditSinkBuilder.h  TextEditSinkFactory.cpp  TextEditSinkFactory.h  TextEditSinkHubFactory.cpp  TextEditSinkHubFactory.h  TextEditSinkWidget.cpp  TextEditSinkWidget.h  logger.qrc
tests/core/: CMakeLists.txt  MessageCodesTests.cpp
tests/core/selectors/: ClassMatcherTests.cpp  CompoundMatcherTests.cpp  DummyObjects.h  FuzzyPropertyMatcherTests.cpp  ObjectNameMatcherTests.cpp  ObjectsSelectorsTests.cpp  PropertyMatcherTests.cpp  TestObjectTree.cpp  TestObjectTree.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  TypeMatcherTests.cpp
